--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "eth-connect": "^6.0.0"
   },
   "devDependencies": {
-    "decentraland-ecs": "^6.11.8"
+    "decentraland-ecs": "^6.11.11"
   },
   "bundledDependencies": [
+    "@dcl/ui-scene-utils",
+    "eth-connect",
+    "@dcl/ecs-scene-utils"
+  ],
+  "bundleDependencies": [
     "@dcl/ui-scene-utils",
     "eth-connect",
     "@dcl/ecs-scene-utils"
