--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,16 @@
     "strict": false,
     "paths": {
       "@dcl/ecs-scene-utils": [
-        "node_modules\\@dcl\\ecs-scene-utils\\dist\\index.d.ts"
+        "node_modules\\@dcl\\ecs-scene-utils\\dist\\index.d.ts",
+        "node_modules/@dcl/ecs-scene-utils/dist/index.d.ts"
       ],
       "@dcl/ui-scene-utils": [
-        "node_modules\\@dcl\\ui-scene-utils\\dist\\index.d.ts"
+        "node_modules\\@dcl\\ui-scene-utils\\dist\\index.d.ts",
+        "node_modules/@dcl/ui-scene-utils/dist/index.d.ts"
       ],
       "eth-connect": [
-        "node_modules\\eth-connect\\eth-connect.d.ts"
+        "node_modules\\eth-connect\\eth-connect.d.ts",
+        "node_modules/eth-connect/eth-connect.d.ts"
       ]
     },
     "baseUrl": "."
